Fixed issues with missing methods from org.json package in android studio